Helium: Fixed wrong font being used for the content titles (#1603)

--- a/themes/helium/joomla/scss/helium-joomla/components/_content.scss
+++ b/themes/helium/joomla/scss/helium-joomla/components/_content.scss
@@ -1,6 +1,7 @@
 // Single Article
 .page-header {
     h2 {
+        font-family: get-font-family($font-family-title);
         margin-bottom: 0.5rem;
     }
 }
